1998-12-11  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-garpar.adb: Fix a problem of boot on main partition.

	* s-rpc.adb: Fix a bug in RPC abortion.

1998-12-09  Laurent Pautet  <pautet@scapin.enst.fr>

	* Makefile.in, Makefile.am: Fix a filemode problem.
	
	* s-parint.adb, s-rpc.adb: Move call to
 	Register_Unit_On_Boot_Server from RPC.Establish_RPC_Receiver to
 	Partition_Interface.Run to allow the replacement of System.RPC.

1998-12-08  Laurent Pautet  <pautet@scapin.enst.fr>

	* Makefile.am, Makefile.in: Add user write mode to
 	${GARLIC}/libgnat.a before updating it. Then, remove user write mode.

1998-12-01  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-gaphlo.adb, s-gaphlo.ads: Add a procedure to free a location
 	and all its components.

	* s-gardeb.adb: '+' is a special character that allows to set all 
	debug levels to true.

	* s-garfil.ads, s-garfil.adb: Add a parameter Error to some
	subprograms and remove use of exceptions.

	* s-garopt.ads, s-garopt.adb: Define two strings Boot_Location and
 	Self_Location. Define three new flags Is_Boot_Server,
 	Is_Boot_Mirror (true when a partition has a copy of units or
 	partitions tables) and Mirrors_Expected (true when a partition can
 	boot only with more than one boot mirror partition). Check for new
 	env. var (and update old ones, for instance, LOCATION into
 	SELF_LOCATION) and command line args (and update old ones). Check
 	also option inconsistencies. Split Initialize in two procedures,
 	one for the defaults, one for user options.

	* s-garuti.ads, s-garuti.adb: Add error code management in order
 	to remove use of exception. It is sometimes quite difficult to
 	track an exception in the middle of critical sections. By using
 	error code, the source code is easier to understand.

	* s-garrem.adb: Do not add --slave on command line to launch a
 	slave. This is already included in the slave code. Adding --slave
 	also forbids some configuration.
